--- a/client/views/arenaranking/arenaranking.less
+++ b/client/views/arenaranking/arenaranking.less
@@ -11,6 +11,14 @@
   .kingImage{
     text-align: center;
   }
+  .kingImage {
+    height: 100%;
+    text-align: center;
+
+    .profilePic{
+      height: 100%;
+    }
+  }
 
   .title {
     text-align: center;
