--- a/client/views/header/header.html
+++ b/client/views/header/header.html
@@ -1,7 +1,7 @@
 <template name="header">
 	<div id="view-header full-width">
 		<div class="col-xs-6">
-			<a id="home-icon" class="ease"><span class="fa fa-home"></span></a> |
+			<a id="home-icon" class="ease"><span class="fa fa-globe"></span></a> |
 			<a id="logout-icon" class="ease"><span class="fa fa-power-off"></span></a>
 			{{#if isAdmin}} | <a href="/admin">Admin</a>{{/if}}
 		</div>
