--- a/client/views/layout.html
+++ b/client/views/layout.html
@@ -17,7 +17,7 @@
 	{{#if currentUser}}
 		{{!-- if the user is logged in show the header and main yield --}}
 		<div class="container">
-			<div class="row">
+			<div class="row" style="padding-left: 0px;padding-right: 0px">
 				<div class="col-xs-12 headerContainer">
 					{{> header}}
 				</div>
