--- a/client/views/common.less
+++ b/client/views/common.less
@@ -11,6 +11,12 @@
   content: '*';
 }
 
+.container,.row{
+  //padding-left: 0px;
+  //padding-right: 0px;
+
+}
+
 body{
   background-color: @backgroundColor;
   font-family: 'Lato';
@@ -34,8 +40,8 @@ body{
 
 
 body div.container {
-  padding-left: 5px;
-  padding-right: 5px;
+  //padding-left: 5px;
+  //padding-right: 5px;
 }
 
 
