Fixed styling and JS of the ranking page;

--- a/client/views/arenaranking/arenaranking.html
+++ b/client/views/arenaranking/arenaranking.html
@@ -8,7 +8,7 @@
         <div class="col-xs-6 kingImage"><img class='profilePic' src="/images/profiles/{{king.picture}}"></div>
 -->
     <div class="row kingRow">
-        <div class="col-xs-4 col-xs-offset-4 title">King of the {{arena.name}} arena</div>
+        <div class="col-xs-12 center title">King of the {{arena.name}} arena</div>
         <div class="col-xs-4 col-xs-offset-4 kingImage"><img class='profilePic' src="/images/profiles/{{king.picture}}"></div>
 
     </div>
