--- a/client/views/dashboard/dashboard.html
+++ b/client/views/dashboard/dashboard.html
@@ -6,21 +6,13 @@
         </h1>
         -->
         {{#if minDistance}}
-			<button class="full-width btn btn-primary" data-arena-id="{{closest._id}}">
+			<button id="enter-button" class="full-width btn btn-primary" data-arena-id="{{closest._id}}">
 				Enter {{closest.name}} Arena
-<!--
-            <h4>You're in range of the {{closest.name}} arena!</h4>
-            <button id="enter-button" class="full-width btn btn-primary" data-arena-id="{{closest._id}}">
-				Enter Arena
--->
 			</button>
             {{else}}
             <h4>Your nearest arena is: {{closest.name}}</h4>
-            <button class="full-width btn btn-primary getToButton">
-                Get to {{closest.name}} Arena
-<!--
+            <button id="enter-button" class="full-width btn btn-primary getToButton">
                 Get directions to {{closest.name}}
--->
             </button>
         {{/if}}
         {{>mapControl}}
