--- a/client/views/lobbies/arenalobby/arenalobby.html
+++ b/client/views/lobbies/arenalobby/arenalobby.html
@@ -39,7 +39,7 @@
 
                             <span class="fa fa-user fa-2x"></span>
                             <br>
-                            Duel
+                            Team
 
                         </div>
 
@@ -49,6 +49,7 @@
             </div>
 
             <div class="row kingRow">
+
                 <a href="/arena/{{arena._id}}/ranking" class="col-xs-4" style="text-align: center;height: 100%">
                     <img src="/images/icons/crown33.png" style="height: 60%"><br>View Ranks
                 </a>
