--- a/client/views/lobbies/arenalobby/arenalobby.less
+++ b/client/views/lobbies/arenalobby/arenalobby.less
@@ -1,9 +1,38 @@
 @import "../../variables";
 
 #view-arenalobby {
+
+  .kingRow {
+    background-color: white;
+    width: 100%;
+    height: 100px;
+    position: fixed;
+    bottom: 0px;
+    left: 15px;
+    .rightCol {
+      padding: 0px;
+      padding-right: 0px;
+      padding-right: 0px;
+      .col-xs-4, .col-xs-6, .col-xs-12 {
+        padding-right: 0px;
+        padding-right: 0px;
+      }
+    }
+  }
+  .kingImage {
+    height: 100%;
+    text-align: center;
+
+    .profilePic {
+      height: 100%;
+    }
+  }
+
+
+
   .container {
-    padding-left: 0px;
-    padding-left: 0px;
+    //padding-left: 0px;
+    //padding-left: 0px;
   }
   .lobbyDescription, .lobbyImage {
     margin-top: 30px;
@@ -43,18 +72,18 @@
     .imageRow {
       margin-top: 30px;
       height: 180px;
-      text-align: left;
 
       .btn {
         height: 100%;
       }
 
     }
+  }
 
     .buttonRow {
-      margin-top: 20px;
+      margin-top: 50px;
       height: 200px;
-      text-align: left;
+      text-align: center;
 
       .btn {
         height: 100%;
@@ -67,42 +96,14 @@
       }
 
       .fa {
-        position: absolute;
-        top: 15px;
-        left: 60px;
+        top: 5px;
+        //left: 60px;
         color: #fff;
         font-size: 32px;
       }
 
     }
 
-    .kingRow {
-      background-color: white;
-      width: 100%;
-      height: 100px;
-
-      position: fixed;
-      bottom: 0px;
-      left: 15px;
-      .rightCol {
-        padding: 0px;
-        padding-right: 0px;
-        padding-right: 0px;
-        .col-xs-4, .col-xs-6, .col-xs-12 {
-          padding-right: 0px;
-          padding-right: 0px;
-        }
-      }
-
-    }
-    .kingImage {
-      height: 100%;
-      text-align: center;
-
-      .profilePic {
-        height: 100%;
-      }
-    }
 
     button {
       .fa-sort-down {
@@ -111,4 +112,4 @@
       }
     }
   }
-}
+
