fixes on arena lobby

--- a/client/views/lobbies/arenalobby/arenalobby.html
+++ b/client/views/lobbies/arenalobby/arenalobby.html
@@ -20,7 +20,7 @@
                     <a href="/arena/{{arena._id}}/game/sudoku" class="col-xs-10 col-xs-offset-1 btn btn-default btn-play">
                         <div class="playText">
                              <span class="fa fa-users fa-2x"></span>
-                            <br>Ranks</div>
+                            <br>Rank<br> Game</div>
 
                         <!--div class="col-xs-12 playText" style="text-align: center" >
 
@@ -39,7 +39,7 @@
 
                             <span class="fa fa-user fa-2x"></span>
                             <br>
-                            Team
+                            Team<br> Game
 
                         </div>
 
@@ -61,7 +61,7 @@
 
 
                     <div class="col-xs-4 rightCol">
-                        <p><b>{{king.name}}</b></p>
+                        <span class="kingName"><b>{{king.name}}</b></span>
                         <div class="col-xs-6" style="text-align: left">
                             Games
                         </div>
