--- a/client/views/lobbies/arenalobby/arenalobby.less
+++ b/client/views/lobbies/arenalobby/arenalobby.less
@@ -1,6 +1,9 @@
 @import "../../variables";
 
 #view-arenalobby {
+  .kingName{
+    font-size: 18px;
+  }
 
   .kingRow {
     background-color: white;
