--- a/client/views/lobbies/arenalobby/arenalobby.html
+++ b/client/views/lobbies/arenalobby/arenalobby.html
@@ -1,83 +1,62 @@
 <template name="arenalobby" xmlns="http://www.w3.org/1999/html">
-    <div id="view-arenalobby">
-        <div class="container">
-            <div class="row">
-                <div class="col-xs-6 lobbyImage">
-                    <img src="/images/icons/{{arena.icon}}.svg">
-                </div>
-                <div class="col-xs-6 lobbyDescription">
-                    {{arena.name}}<br/>
-                </div>
-            </div>
-            <div class="row"><p></p></div>
-            <div class="row imageRow" style="text-align: center">
-                    <img src="/images/background/play.png">
+	<div id="view-arenalobby">
+		<div class="container">
+			<div class="row">
+				<div class="col-xs-6 lobbyImage">
+					<img src="/images/icons/{{arena.icon}}.svg">
+				</div>
+				<div class="col-xs-6 lobbyDescription">
+					{{arena.name}}<br/>
+				</div>
+			</div>
+			<div class="row"><p></p></div>
+			<div class="row imageRow center">
+				<img src="/images/background/play.png">
 
-            </div>
+			</div>
 
-            <div class="row buttonRow">
-                <div class="col-xs-6" style="text-align: center">
-                    <a href="/arena/{{arena._id}}/game/sudoku" class="col-xs-10 col-xs-offset-1 btn btn-default btn-play">
-                        <div class="playText">
-                             <span class="fa fa-users fa-2x"></span>
-                            <br>Ranks</div>
+			<div class="row buttonRow">
+				<div class="col-xs-6 center">
+					<a href="/arena/{{arena._id}}/game/sudoku" class="col-xs-10 col-xs-offset-1 btn btn-default btn-play">
+						<div class="playText center">
+							<p class="center">
+								<span class="fa fa-user fa-2x"></span>
+							</p>
+							Single
+						</div>
+					</a>
+				</div>
+				<div class="col-xs-6 ">
+					<a href="/arena/{{arena._id}}/play" class="col-xs-10 col-xs-offset-1 btn btn-default btn-play">
+						<div class="playText center">
+							<p class="center">
+								<span class="fa fa-user fa-2x"></span>
+								<span class="fa fa-user fa-2x"></span>
+							</p>
+							Co-Op
+						</div>
+					</a>
+				</div>
+			</div>
 
-                        <!--div class="col-xs-12 playText" style="text-align: center" >
+			<div class="row kingRow">
+				<a href="/arena/{{arena._id}}/ranking" class="col-xs-4 center" style="height: 100%">
+					<img src="/images/icons/crown33.png" style="height: 60%"><br>View Ranks
+				</a>
+				<div class="col-xs-4 kingImage">
+					<img class='profilePic' src="/images/profiles/{{king.picture}}">
+				</div>
+				<div class="col-xs-4 rightCol">
+					<p><b>{{king.name}}</b></p>
 
-                            <span></span>
-                        </div-->
+					<div class="col-xs-6">Games</div>
+					<div class="col-xs-6">Score</div>
+					<div class="col-xs-6 center">{{highScore.gamesCount}}
+					</div>
+					<div class="col-xs-6">{{highScore.points}}</div>
+				</div>
 
-                    </a>
-
-                </div>
-                <div class="col-xs-6 ">
-                    <a href="/arena/{{arena._id}}/play" class="col-xs-10 col-xs-offset-1 btn btn-default btn-play">
-
-                        <div class=" playText" style="text-align: center" >
-
-                            <span class="fa fa-user fa-2x"></span>
-
-                            <span class="fa fa-user fa-2x"></span>
-                            <br>
-                            Team
-
-                        </div>
-
-
-                    </a>
-                </div>
-            </div>
-
-            <div class="row kingRow">
-
-                <a href="/arena/{{arena._id}}/ranking" class="col-xs-4" style="text-align: center;height: 100%">
-                    <img src="/images/icons/crown33.png" style="height: 60%"><br>View Ranks
-                </a>
-                <div class="col-xs-4 kingImage"><img class='profilePic' src="/images/profiles/{{king.picture}}">
-
-                </div>
-
-
-
-
-                    <div class="col-xs-4 rightCol">
-                        <p><b>{{king.name}}</b></p>
-                        <div class="col-xs-6" style="text-align: left">
-                            Games
-                        </div>
-                        <div class="col-xs-6">
-                            Score
-                        </div>
-                        <div class="col-xs-6" style="text-align: center">
-                            {{highScore.gamesCount}}
-                        </div>
-                        <div class="col-xs-6">
-                            {{highScore.points}}
-                        </div>
-
-                    </div>
-
-            </div>
-        </div>
-    </div>
+			</div>
+		</div>
+	</div>
 </template>
