--- a/client/views/lobbies/arenalobby/arenalobby.less
+++ b/client/views/lobbies/arenalobby/arenalobby.less
@@ -12,6 +12,15 @@
     position: fixed;
     bottom: 0px;
     left: 15px;
+
+    #footer-rank-link {
+      height: 100%;
+      margin-top: 10px;
+      img {
+        height: 60%
+      }
+    }
+
     .rightCol {
       padding: 0px;
       padding-right: 0px;
