--- a/client/views/register/register.html
+++ b/client/views/register/register.html
@@ -1,6 +1,6 @@
 <template name="register">
-    <h2> Register an account</h2>
     <div class="container" id="view-login">
+		<h1 class="center">Register an account</h1>
         <form id="register-form">
             <div class="row">
                 <div class="col-xs-12 form-group">
