--- a/client/views/games/sudoku/sudoku.less
+++ b/client/views/games/sudoku/sudoku.less
@@ -34,6 +34,10 @@
       background-color: #ff0000;
       color: #fff;
     }
+    .cell.observe.error {
+      background-color: #ff0000;
+      color: #fff;
+    }
     .cell.observe {
       background-color: #f5ff95;
     }
