Fixed ui issues;

--- a/client/views/header/header.html
+++ b/client/views/header/header.html
@@ -7,7 +7,7 @@
 		</div>
 
 		<div class="col-xs-6 right">
-			<a href="/user/{{currentUser._id}}" class="ease">{{currentUser.profile.name}}</a>
+			{{currentUser.profile.name}}
 		</div>
 	</div>
 </template>
