--- a/client/views/variables.less
+++ b/client/views/variables.less
@@ -1,5 +1,5 @@
 //@import url(http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext);
-
+@import url('https://fonts.googleapis.com/css?family=Josefin+Slab');
 /* COLORS */
 @brandColor: #ff912f;
 @brandTextColor: #ffffff;
