Fixed layout of footer in arena lobby; Added build files for bluemix deployment;

--- a/client/views/lobbies/arenalobby/arenalobby.html
+++ b/client/views/lobbies/arenalobby/arenalobby.html
@@ -49,14 +49,14 @@
 				<div class="col-xs-4 kingImage">
 					<img class='profilePic' src="/images/profiles/{{king.picture}}">
 				</div>
-				<div class="col-xs-4 rightCol" style="border-left: 1px solid #f00;">
-					<p class="right">{{king.name}}</p>
+				<div class="col-xs-4 rightCol">
+					<p>{{king.name}}</p>
 
-					<div class="col-xs-6">Games</div>
-					<div class="col-xs-6">Score</div>
+					<div class="col-xs-6 center label">Games</div>
+					<div class="col-xs-6 center label">Score</div>
 					<div class="col-xs-6 center">{{highScore.gamesCount}}
 					</div>
-					<div class="col-xs-6">{{highScore.points}}</div>
+					<div class="col-xs-6 center">{{highScore.points}}</div>
 				</div>
 
 			</div>
