--- a/client/views/lobbies/arenalobby/arenalobby.less
+++ b/client/views/lobbies/arenalobby/arenalobby.less
@@ -23,11 +23,23 @@
 
     .rightCol {
       padding: 0px;
-      padding-right: 0px;
-      padding-right: 0px;
-      .col-xs-4, .col-xs-6, .col-xs-12 {
-        padding-right: 0px;
-        padding-right: 0px;
+
+      p {
+        font-weight: bold;
+        font-family: sans-serif;
+        text-align: center;
+        padding: 10px;
+      }
+
+      .label {
+        color: #666;
+        font-size: 12px;
+        text-decoration: underline;
+        margin-bottom: 5px;
+      }
+
+      .col-xs-6 {
+        padding: 0px;
       }
     }
   }
