Added link to join a random arena (easier, if you don't live nearby an arena);

--- a/client/views/dashboard/dashboard.html
+++ b/client/views/dashboard/dashboard.html
@@ -17,5 +17,7 @@
         {{/if}}
         {{>mapControl}}
 
+
+		<br/><br/><br/><a href="/arena/{{randomArena}}">Join random arena</a>
     </div>
 </template>
